[gd_scene load_steps=8 format=2]

[ext_resource path="res://Inimigo/Inimigo.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.866667, 0.870588, 0.0823529, 1 )
roughness = 0.24

[sub_resource type="CapsuleShape" id=3]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.937255, 0.0196078, 0.0196078, 1 )
metallic = 0.41
emission_enabled = true
emission = Color( 1, 0.0705882, 0.0705882, 1 )
emission_energy = 3.75
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=6]
extents = Vector3( 4.23864, 1, 5.30129 )

[node name="Inimigo" type="KinematicBody" groups=[
"Inimigos",
]]
collision_layer = 5
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.1963, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.1963, 0 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpatialVida" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01296, 4.02018, 0 )

[node name="MeshInstanceVida" type="MeshInstance" parent="SpatialVida"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07028, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
